--- a/css/juego.css
+++ b/css/juego.css
@@ -389,14 +389,31 @@ canvas{
         border-radius: 4px;
         position: relative;
         display: flex;
-        flex-direction: column;
-        width: 550px;
+        width: 1000px;
         max-width: 90%;
         background: #333F77;
         padding: 1em 2em;
         margin-top: 5%;
       }
-    
+      .modal__content .como-jugar-info{
+        width: 70%;
+      }
+      .modal__content .como-jugar-img{
+        margin-left: 10%;
+        font-size: 12px;
+        width: 70%;
+      }
+      .como-jugar-img p{
+        line-height: 20px;
+      }
+      .como-jugar-img .imgs{
+        display: flex;
+      }
+      .como-jugar-img .imgs img{
+        width: 200px;
+        height: 220px;
+        margin: 20px;
+      }
       .modal__content p, h1{
         color: white;
       }
